--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "oidc-client-ts": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-oidc-context": "^3.3.0"
+    "react-oidc-context": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
